# brouhaha

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  analysis.slog  analyze.slog  branches.md  branching_log.txt  check.py  chicken.h  clean.py  clean2.py  compile-prov.rkt  compile-save.rkt  compile.rkt  cook.rkt  coverage.dict  coverage.ipynb  coverage.json  coverage.py  coverage.rkt  coverage.txt  dependencies.tar.xz  desugar.slog  dummy.cpp  easy_cpp_program.cpp  emit-cpp-abo-v2.rkt  emit-cpp-af-latest.rkt  emit-cpp-arg-buf-opt.rkt  emit-cpp-corect.rkt  emit-cpp-corr.rkt  emit-cpp-curr.rkt  emit-cpp-in-dev.rkt  emit-cpp-prov.rkt  emit-cpp-using-stack.rkt  emit-cpp.rkt  emit-cpp2.rkt  emit-slog.rkt  emit_cpp-changelog.md  fact.haha_output  (+30 more)
runtime-testing/: CMakeLists.txt  prelude-tests.cpp  prelude-tests_2.cpp
tests/: CMakeLists.txt  check.haha  complex.haha  count-divisors.haha  divison.haha  easy.haha  eq.haha  fact.haha  foldl-style.haha  hash-ref.haha  interleave.rkt  lambda.haha  length.haha  let.haha  modulo.haha  multiply-float.haha  power.haha  reverse-tst.rkt  reverse.haha  string.haha  sym_equal.haha  sym_gt.haha  sym_lt.haha  testing.hpp  var.haha  yes.haha
tests/1a/: 1a.haha
tests/abs/: abs.haha
tests/absolute/: absolute.haha
tests/add/: add.haha
tests/akshar/: akshar.haha
tests/and/: and.haha  answer  driver.cpp
tests/app/: answer  app.haha
tests/append/: append.haha
tests/apply/: answer  apply.haha
tests/benchmark_ack/: benchmark_ack.haha  benchmark_ack.rkt  benchmark_ack.scm
tests/benchmark_cek/: benchmark_cek.haha
tests/benchmark_cpstak/: benchmark_cpstak.haha  benchmark_cpstak.rkt  benchmark_cpstak.scm
tests/benchmark_deriv/: answer  benchmark_deriv.haha  benchmark_deriv.rkt  benchmark_deriv.scm
tests/benchmark_fib/: benchmark_fib.haha  benchmark_fib.rkt  benchmark_fib.scm
tests/benchmark_fibfp/: answer  benchmark_fibfp.haha  benchmark_fibfp.rkt  benchmark_fibfp.scm
tests/benchmark_mazefun/: answer  benchmark_mazefun.haha  benchmark_mazefun.rkt  benchmark_mazefun.scm
tests/benchmark_nqueens/: benchmark_nqueens.haha  benchmark_nqueens.rkt  benchmark_nqueens.scm
tests/benchmark_ntakl/: answer  benchmark_ntakl.haha  benchmark_ntakl.rkt  benchmark_ntakl.scm
tests/benchmark_pi/: benchmark_pi.haha
tests/benchmark_pnpoly/: benchmark_pnpoly.haha
tests/benchmark_primes/: answer  benchmark_primes.haha  benchmark_primes.rkt  benchmark_primes.scm
tests/benchmark_sudoku/: answer  benchmark_sudoku.haha  benchmark_sudoku.rkt  benchmark_sudoku.scm
tests/benchmark_sum/: benchmark_sum.haha  benchmark_sum.rkt  benchmark_sum.scm
tests/benchmark_sumfp/: benchmark_sumfp.haha  benchmark_sumfp.rkt  benchmark_sumfp.scm
tests/benchmark_tak/: benchmark_tak.haha  benchmark_tak.rkt  benchmark_tak.scm
tests/benchmark_takl/: benchmark_takl.haha  benchmark_takl.rkt  benchmark_takl.scm
tests/benchmark_uva_paper/: benchmark_uva_paper.haha
tests/benchmark_uva_paper_two/: benchmark_uva_paper_two.haha
tests/call_cc/: call_cc.haha
tests/car/: car.haha
tests/cdr/: answer  cdr.haha
tests/cond/: cond.haha
tests/cons/: cons.haha
tests/count-divisors/: count-divisors_alphatize.out  count-divisors_anf.out  count-divisors_closure.out  count-divisors_cpp_program.cpp  count-divisors_cps.out  count-divisors_desugar.out
tests/count_divisors/: count_divisors.haha  driver.cpp
tests/division/: answer  division.haha
tests/divison/: divison_alphatize.out  divison_anf.out  divison_closure.out  divison_cpp_program.cpp  divison_cps.out  driver.cpp
tests/double_inner/: double_inner.haha
tests/easy/: driver.cpp  easy.haha  easy_alphatize.out  easy_anf.out  easy_closure.out  easy_compile.out  easy_cpp_program.cpp  easy_cps.out
tests/eq/: driver.cpp  eq.haha  eq_alphatize.out  eq_anf.out  eq_closure.out  eq_compile.out  eq_cpp_program.cpp  eq_cps.out
tests/equal/: equal.haha
tests/error/: CMakeLists.txt  driver.cpp  error.haha
tests/eta/: eta.haha
tests/even/: driver.cpp  even.haha  even_alphatize.out  even_anf.out  even_closure.out  even_cpp_program.cpp  even_cps.out
tests/exact_ceiling/: exact_ceiling.haha
tests/exact_floor/: exact_floor.haha
tests/exact_round/: exact_round.haha
tests/expt/: expt.haha
tests/fact/: driver.cpp  fact.haha  fact_alphatize.out  fact_anf.out  fact_closure.out  fact_cpp_program.cpp  fact_cps.out
tests/filter/: answer  driver.cpp  filter.haha  filter_alphatize.out  filter_alphatize_res.out  filter_anf.out  filter_closure.out  filter_cpp_program.cpp  filter_cps.out
tests/float/: answer  driver.cpp  float.haha  float_alphatize.out  float_anf.out  float_closure.out  float_cpp_program.cpp  float_cps.out
tests/fold_r/: fold_r.haha
tests/foldl-style/: foldl-style_alphatize.out  foldl-style_anf.out  foldl-style_closure.out  foldl-style_cpp_program.cpp  foldl-style_cps.out
tests/foldl_style/: driver.cpp  foldl_style.haha
tests/hash/: answer  driver.cpp  hash.haha  hash_alphatize.out  hash_anf.out  hash_closure.out  hash_cpp_program.cpp  hash_cps.out
tests/hash-count/: hash-count_alphatize.out  hash-count_anf.out  hash-count_closure.out  hash-count_cpp_program.cpp  hash-count_cps.out
tests/hash-has-key/: hash-has-key_alphatize.out  hash-has-key_anf.out  hash-has-key_closure.out  hash-has-key_cpp_program.cpp  hash-has-key_cps.out
tests/hash-ref/: hash-ref_alphatize.out  hash-ref_anf.out  hash-ref_closure.out  hash-ref_cpp_program.cpp  hash-ref_cps.out
tests/hash-set/: hash-set_alphatize.out  hash-set_anf.out  hash-set_closure.out  hash-set_cpp_program.cpp  hash-set_cps.out  hash-set_desugar.out
tests/hash_count/: driver.cpp  hash_count.haha
tests/hash_has_key/: driver.cpp  hash_has_key.haha
tests/hash_keys/: answer  hash_keys.haha
tests/hash_ref/: answer  driver.cpp  hash_ref.haha
tests/hash_set/: driver.cpp  hash_set.haha
tests/hash_stress/: hash_stress.haha
tests/inline/: inline.haha
tests/inline_test/: inlinable.cpp  inline_test.haha
tests/inner_hashes/: answer  inner_hashes.haha
tests/interleave/: answer  driver.cpp  interleave.haha  interleave_alphatize.out  (+5 more)
(+1593 files in other folders)
